@@ -1,3 +1,7 @@
+2007-02-14  Richard Dale  <rdale@foton.es>
+
+	* Added cmake files for building the csrcc tool
+
 2007-02-13  Richard Dale  <rdale@foton.es>
 
 	* Removed the signal spy check and replaced it with a global flag 
